using RogueEngine.Engine.Core;

namespace RogueEngine.Engine.Rendering;

public interface IRenderer
{
    void Render(World world);
}
